small fix for overlapping text on sidebar

--- a/css/_global.css
+++ b/css/_global.css
@@ -189,7 +189,7 @@ Sidebar
   font-weight: bold;
   position: relative;
   padding: 0 5px;
-  font-size: 14px;
+  font-size: 12px;
   color: #ff7f00;
 }
 #sidebar .handle.showing_all:after {
